[package]
name = "tr-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { path = "../ta-common", version = "0.1.0" }
wilders-rs = { path = "../wilders-rs", version = "0.1.0" }
float-ord = "0.2.0"
